k8s/traefik/dashboard-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-stripprefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /dashboard/
      - /dashboard
