k8s/traefik/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik  # Add this line
      containers:
        - name: traefik
          image: traefik:v2.10
          args:
            - --api.dashboard=true
            - --api.insecure=true
            - --providers.kubernetesCRD
            - --providers.kubernetesIngress
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
