k8s/traefik/custom-nodeports-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-custom-nodeports
  namespace: kube-system
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
  ports:

    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 32080
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
      nodePort: 32081
