k8s/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9080
      targetPort: web
      name: web
    - protocol: TCP
      port: 8080
      targetPort: traefik
      name: traefik
  selector:
    app.kubernetes.io/name: traefik
