k8s/traefik/service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  type: NodePort  # This makes it accessible from outside the cluster
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: web
    - port: 443
      targetPort: 443
      protocol: TCP
      name: websecure
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: admin
  selector:
    app: traefik
