k8s/traefik/traefik-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  type: NodePort
  ports:
    - name: dashboard
      port: 8080
      targetPort: 8080
      protocol: TCP
      nodePort: 31080
  selector:
    app.kubernetes.io/name: traefik
