k8s/traefik/dashboard-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - traefik
  routes:
    - kind: Rule
      match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
      middlewares:
        - name: dashboard-stripprefix
          namespace: kube-system
      services:
        - kind: TraefikService
          name: dashboard@internal
        - kind: TraefikService
          name: api@internal
