k8s/traefik/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.reyops.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
